# umamusume-open

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: main.rs
